force-app/main/default/objects/Match__c/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <description>Days left before the beginning of the match</description>
    <formula>IF((Start_DateTime__c -  NOW())&gt;=0,  Start_DateTime__c -  NOW() , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>