force-app/main/default/objects/Match__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <description>Home Team</description>
    <label>Home Team</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Team must have 11 active players</errorMessage>
        <filterItems>
            <field>Team__c.Total_Active_Players__c</field>
            <operation>greaterOrEqual</operation>
            <value>11</value>
        </filterItems>
        <infoMessage>Team must have 11 active players</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Match</relationshipLabel>
    <relationshipName>Match</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>