force-app/main/default/objects/Match__c/fields/Previous_Match_Between_Teams_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Previous_Match_Between_Teams_Datetime__c</fullName>
    <description>Represents the date and time of the previous match between those teams.</description>
    <inlineHelpText>Represents the date and time of the previous match between those teams.</inlineHelpText>
    <label>Previous Match Between Teams Datetime</label>
    <type>DateTime</type>
</CustomField>