force-app/main/default/objects/Match__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>&apos;0:0&apos;</defaultValue>
    <description>Represents Home Team vs Visitor scores (e.g. &apos;1:2&apos; means Visitor won)</description>
    <label>Score</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>