force-app/main/default/objects/Match__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Beginning of the match</description>
    <label>Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>