force-app/main/default/objects/Match__c/fields/Visitors__c.field-meta.xml
<CustomField>
    <fullName>Visitors__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Visitor team</description>
    <label>Visitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Team must have 11 active players</errorMessage>
        <filterItems>
            <field>Team__c.Total_Active_Players__c</field>
            <operation>greaterOrEqual</operation>
            <value>11</value>
        </filterItems>
        <infoMessage>Team must have 11 active players</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Match (Visitor)</relationshipLabel>
    <relationshipName>Match1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>