force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <description>Represents Name of winner team or &apos;Draw&apos; if score is equal</description>
    <formula>IF( VALUE(LEFT( Score__c ,FIND(&apos;:&apos;,Score__c )-1))&gt;VALUE(RIGHT( Score__c ,FIND(&apos;:&apos;,Score__c )-1)),  Home_Team__r.Name ,  IF( VALUE(LEFT( Score__c ,FIND(&apos;:&apos;,Score__c )-1))&lt;VALUE(RIGHT( Score__c ,LEN(Score__c)-FIND(&apos;:&apos;,Score__c))),  Visitors__r.Name , &apos;Draw&apos;) )</formula>
    <inlineHelpText>Represents Name of winner team or &apos;Draw&apos; if score is equal</inlineHelpText>
    <label>Winner</label>
    <type>Text</type>
</CustomField>