force-app/main/default/objects/Match__c/validationRules/Match_start_rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Match_start_rule_1</fullName>
    <active>true</active>
    <description>Validate Match&apos;s StartDateTime__c cannot be in past for new Matches</description>
    <errorConditionFormula>(Start_DateTime__c &lt;NOW()) &amp;&amp; ISCHANGED(Start_DateTime__c)</errorConditionFormula>
    <errorDisplayField>Start_DateTime__c</errorDisplayField>
    <errorMessage>Match&apos;s StartDateTime__c cannot be in past for new Matches</errorMessage>
</ValidationRule>